--- a/Illuminationn/app/src/main/res/values/styles.xml
+++ b/Illuminationn/app/src/main/res/values/styles.xml
@@ -1,10 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
                 <!-- Customize your theme here. -->
-    </style>
-        <style name="CustomActionBarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
     </style>
 
 </resources>
