--- a/Illuminationn/app/src/main/res/layout/activity_main.xml
+++ b/Illuminationn/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,19 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="72dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/text_field"
+        android:text="@string/text_field"
+        android:layout_above="@+id/button_field"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="128dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
