--- a/Illuminationn/app/src/main/res/layout/activity_main.xml
+++ b/Illuminationn/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:text="@string/button_field"
         android:id="@+id/button_field"
+        android:onClick="setColor"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="72dp" />
