scatchy front end done!

--- a/Illuminationn/app/src/main/res/layout/activity_connected.xml
+++ b/Illuminationn/app/src/main/res/layout/activity_connected.xml
@@ -13,23 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Thats it! Just leave you phone and enjoy the show!"
+        android:text="That's it! Just leave your phone and enjoy the show!"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#6b6b6b" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="161dp"
         android:textColor="#6b6b6b" />
 
 </RelativeLayout>
