--- a/Illuminationn/app/src/main/res/layout/activity_main.xml
+++ b/Illuminationn/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:text="@string/button_field"
         android:id="@+id/button_field"
+        android:onClick="setColor"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="72dp" />
@@ -20,12 +21,26 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/text_field"
-        android:text="@string/text_field"
+        android:hint="@string/text_field"
         android:layout_above="@+id/button_field"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="128dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_field"
+        android:id="@+id/title_field"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/text_field"
+        android:layout_alignEnd="@+id/text_field"
+        android:layout_above="@+id/text_field"
+        android:textAlignment="center" />
 
 </RelativeLayout>
